// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ables sort snapshot 1`] = `
Object {
  "_reduce.list": Object {},
}
`;

exports[`chr_jobs sort snapshot 1`] = `
Object {
  "_reduce.list": Object {
    "sort": Array [
      "face.order",
    ],
  },
}
`;

exports[`chr_npcs sort snapshot 1`] = `
Object {
  "_reduce.list": Object {},
}
`;

exports[`chr_sets sort snapshot 1`] = `
Object {
  "_reduce.list": Object {},
}
`;

exports[`faces sort snapshot 1`] = `
Object {
  "_reduce.list": Object {
    "sort": Array [
      "order",
    ],
  },
  "_reduce.name_head": Object {
    "cover": Array [
      "ア",
      "ィ",
      "イ",
      "ゥ",
      "ウ",
      "ェ",
      "エ",
      "ォ",
      "オ",
      "カ",
      "ガ",
      "キ",
      "ギ",
      "ク",
      "グ",
      "ケ",
      "ゲ",
      "コ",
      "ゴ",
      "サ",
      "ザ",
      "シ",
      "ジ",
      "ス",
      "ズ",
      "セ",
      "ゼ",
      "ソ",
      "ゾ",
      "タ",
      "ダ",
      "チ",
      "ヂ",
      "ッ",
      "ツ",
      "ヅ",
      "テ",
      "デ",
      "ト",
      "ド",
      "ナ",
      "ニ",
      "ヌ",
      "ネ",
      "ノ",
      "ハ",
      "バ",
      "パ",
      "ヒ",
      "ビ",
      "ピ",
      "フ",
      "ブ",
      "プ",
      "ヘ",
      "ベ",
      "ペ",
      "ホ",
      "ボ",
      "ポ",
      "マ",
      "ミ",
      "ム",
      "メ",
      "モ",
      "ャ",
      "ヤ",
      "ュ",
      "ユ",
      "ョ",
      "ヨ",
      "ラ",
      "リ",
      "ル",
      "レ",
      "ロ",
      "ヮ",
      "ワ",
      "ヰ",
      "ヱ",
      "ヲ",
      "ン",
    ],
    "index": "set.length",
    "sort": Array [
      "id",
    ],
  },
}
`;

exports[`folders sort snapshot 1`] = `
Object {
  "_reduce.list": Object {},
}
`;

exports[`locales sort snapshot 1`] = `
Object {
  "_reduce.list": Object {},
}
`;

exports[`randoms sort snapshot 1`] = `
Object {
  "_reduce.list": Object {
    "sort": Array [
      "ratio",
      "desc",
    ],
  },
  "_reduce.type": Object {
    "sort": Array [
      "count",
      "asc",
    ],
  },
}
`;

exports[`roles sort snapshot 1`] = `
Object {
  "_reduce.list": Object {},
}
`;

exports[`sow_roletables sort snapshot 1`] = `
Object {
  "_reduce.list": Object {},
}
`;

exports[`tags sort snapshot 1`] = `
Object {
  "_reduce.group.1.list": Object {
    "sort": Array [
      "order",
    ],
  },
  "_reduce.group.10.list": Object {
    "sort": Array [
      "order",
    ],
  },
  "_reduce.group.2.list": Object {
    "sort": Array [
      "order",
    ],
  },
  "_reduce.group.4.list": Object {
    "sort": Array [
      "order",
    ],
  },
  "_reduce.group.5.list": Object {
    "sort": Array [
      "order",
    ],
  },
  "_reduce.group.6.list": Object {
    "sort": Array [
      "order",
    ],
  },
  "_reduce.group.7.list": Object {
    "sort": Array [
      "order",
    ],
  },
  "_reduce.group.8.list": Object {
    "sort": Array [
      "order",
    ],
  },
  "_reduce.group.9.list": Object {
    "sort": Array [
      "order",
    ],
  },
  "_reduce.list": Object {
    "sort": Array [
      "order",
    ],
  },
}
`;
